// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  ADMIN
  USER
}

model User {
  id       Int     @id @default(autoincrement())
  name     String  @default("pedro")
  email    String  @unique
  password String? @unique
  googleId String? @unique
  provider String  @default("local")
  avatar   String?

  role          Role           @default(USER)
  posts         UserPost[]
  refreshTokens RefreshToken[]
  createdAt     DateTime       @default(now())
}

model UserPost {
  id          Int      @id @default(autoincrement())
  description String
  creadtedat  DateTime @default(now())
  userID      Int
  user        User     @relation(fields: [userID], references: [id])
}

model RefreshToken {
  id         Int      @id @default(autoincrement())
  token      String   @unique
  userID     Int
  user       User     @relation(fields: [userID], references: [id])
  expiresAt  DateTime
  creadtedAt DateTime @default(now())
}
